--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,3 +7,21 @@
 .btn{
     @apply bg-purple-500 text-white font-bold rounded border-purple-700 py-2 px-4 border-b-4;
 }
+
+.repos-list{
+    columns: 3;
+    -moz-columns:3;
+    column-rule: 1px solid;
+    @apply p-4;
+}
+
+.repos-list li{
+    break-inside: avoid-column;
+}
+
+.img{
+    width:300px;
+	height: 300px;
+	border-radius: 50%;
+}
+
