--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,10 @@ body{
     @apply bg-gray-100;
 }
 
+h2{
+    font-family: 'Times New Roman', Times, serif;
+}
+
 .btn{
     @apply bg-purple-500 text-white font-bold rounded border-purple-700 py-2 px-4 border-b-4;
 }
